2006-03-27  Jeroen Frijters  <jeroen@frijters.net>

	* vm/reference/java/lang/reflect/Constructor.java
	(getTypeParameters): Check return value of getSignature for null.
	* vm/reference/java/lang/reflect/Method.java
	(getTypeParameters): Check return value of getSignature for null.

2006-03-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* java/lang/ProcessBuilder.java:
	Made final.

2006-03-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/java/net/protocol/http/Headers.java:
	Match layout of file on HEAD.
	* gnu/javax/swing/text/html/parser/htmlValidator.java:
	Likewise.
	* java/awt/datatransfer/DataFlavor.java
	Likewise.

2006-03-26  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/java/rmi/activation/DefaultActivationGroup.java: 
	Documented the default jre spawning strategy (none).
	* java/rmi/activation/ActivationGroup.java (currentGroupId,
	getSystem): Obtain the acticivation system from the 
	DefaultActivationSystem.

2006-03-26  Raif S. Naffah  <raif@swiftdsl.com.au>

	* tools/gnu/classpath/tools/jarsigner/Main.java (setupSigningParams):
	Ask user for keystore password if one was not provided.

2006-03-26  Raif S. Naffah  <raif@swiftdsl.com.au>

	* tools/README: Added Security tools section.
	Documented the jarsigner tool.

2006-03-25  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/JScrollBar.java
	(AccessibleJScrollBar.getAccessibleStateSet): Implemented,
	(AccessibleJScrollBar.getAccessibleRole): Likewise,
	(AccessibleJScrollBar.getAccessibleValue): Likewise,
	(AccessibleJScrollBar.getCurrentAccessibleValue): Likewise,
	(AccessibleJScrollBar.setCurrentAccessibleValue): Likewise,
	(AccessibleJScrollBar.getMinimumAccessibleValue): Likewise,
	(AccessibleJScrollBar.getMaximumAccessibleValue): Likewise,
	(getAccessibleContext): Updated API docs.

2006-03-25  Tom Tromey  <tromey@redhat.com>

	* .externalToolBuilders/CreateLocaleData.launch: Run if resource files
	change or if generator script changes.
