@@ -1,3 +1,10 @@
+2006-03-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* java/io/CharArrayWriter.java:
+	(append(char)): Documented.
+	(append(CharSequence)): Likewise.
+	(append(CharSequence,int,int)): Likewise.
+	
 2006-03-27  Jeroen Frijters  <jeroen@frijters.net>
 
 	* vm/reference/java/lang/reflect/Constructor.java
